--- a/templates/ejercicio/home.html
+++ b/templates/ejercicio/home.html
@@ -1,30 +1,26 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-<div class="container text-center">
-    <h1>Este es el home</h1>
-    <p>{{ nombre }}</p>
-
-    <form action="{% url 'password' %}">
-        <select name="length">
-        <option value="8">8</option>
-        <option value="9">9</option>
-        <option value="10">10</option>
-        <option value="11">11</option>
-        <option value="12">12</option>
-        <option value="13">13</option>
-        <option value="14">14</option>
-        <option value="15">15</option>
-        <option value="16" selected="selected">16</option>
-    </select> Length
-        <br>
-        <input type="checkbox" name="uppercase">Uppercase
-        <br>
-        <input type="checkbox" name="numbers">Numbers
-        <br>
-        <input type="checkbox" name="special">Special characters
-        <br>
-        <input type="submit" value="generar password" class="btn btn-primary">
-    </form>
-
-    <br>
-    <a href="{% url 'nueva' %}">Nueva pagina</a>
+{% include 'ejercicio/header.html' %}
+<br>
+<div class="card">
+    <div class="card-body">
+        <div class="row">
+            <div class="card">
+                {% for col in database %}
+                <div class="card-header">
+                    {{ col.nameProduct }}
+                </div>
+                <div class="card-body">
+                    <img width="150" src="{{ col.imageProduct }}" alt="">
+                    <h4 class="card-title">{{ col.descriptionProduct }}</h4>
+                    <h5>{{ col.priceProduct }}</h5>
+                    <a class="btn btn-success" href="comprar/{{ col.idProduct }}">Comprar</a>
+                    <a class="btn btn-outline-success" href="agregar/{{ col.idProduct }}">Agregar al carrito</a>
+                </div>
+                {% endfor %}
+                <br>
+                <br>
+            </div>
+        </div>
+    </div>
 </div>
+
+{% include 'ejercicio/footer.html' %}
